Update docker-compose file formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: mlflow_server
     container_name: mlflow_server
     ports:
-      - ${MLFLOW_PORT:-5000}:5000
+      - "${MLFLOW_PORT:-5000}:5000"
     volumes:
-      - "${MLFLOW_TRACKING_DIRECTORY:-/tmp}/artifacts:/artifacts"
+      - "${MLFLOW_TRACKING_DIRECTORY:-/tmp/mlruns}/artifacts:/artifacts"
     command: >
       mlflow server
         --default-artifact-root /artifacts
