--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,9 @@ services:
     ports:
       - "${MLFLOW_PORT:-5000}:5000"
     volumes:
-      - "${MLFLOW_TRACKING_DIRECTORY:-/tmp/mlruns}/artifacts:/artifacts"
+      - "${MLFLOW_TRACKING_DIRECTORY:-mlruns}:/mlruns"
     command: >
       mlflow server
-        --default-artifact-root /artifacts
+        --backend-store-uri mlruns/tracking
+        --default-artifact-root mlruns/artifacts
         --host 0.0.0.0
