--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 services:
   web:
     restart: always
-    build: ./mlflow
+    build:
+      context: ./mlflow
+      args:
+        - "MLFLOW_TRACKING_DIRECTORY=${HOME}/mnt/mlruns"
     image: mlflow_server
     container_name: mlflow_server
     ports:
       - "${MLFLOW_PORT:-5000}:5000"
     volumes:
-      - "${MLFLOW_TRACKING_DIRECTORY:-mlruns}:/mlruns"
-    command: >
-      mlflow server
-        --backend-store-uri mlruns/tracking
-        --default-artifact-root mlruns/artifacts
-        --host 0.0.0.0
+      - "${HOME}/mnt/mlruns:${HOME}/mnt/mlruns"
