--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+PROJECT_NAME=mlflow-tracking-server
+
 MLFLOW_PORT=5000
+MLFLOW_BACKEND_URI="mssql+pyodbc://sa:Password123@db:1433/mlflow?driver=ODBC+Driver+18+for+SQL+Server"
+MLFLOW_ARTIFACTS_URI=${HOME}/mnt/mlruns/artifacts
