--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,28 @@
 services:
-  web:
-    restart: always
+  base-ubuntu-python:
     build:
       context: ./mlflow
+      dockerfile: base-ubuntu-python.dockerfile
+    image: base-ubuntu-python:latest
+    deploy:
+      replicas: 0
+
+  web:
+    restart: always
+    depends_on:
+      - base-ubuntu-python
+    build:
+      context: ./mlflow
+      dockerfile: mlflow-tracking-server.dockerfile
       args:
-        - "MLFLOW_TRACKING_DIRECTORY=${HOME}/mnt/mlruns"
+        - "MLFLOW_BACKEND_URI=${MLFLOW_BACKEND_URI?Variable not set}"
+        - "MLFLOW_ARTIFACTS_URI=${MLFLOW_ARTIFACTS_URI?Variable not set}"
     image: mlflow_server
     container_name: mlflow_server
     ports:
       - "${MLFLOW_PORT:-5000}:5000"
     volumes:
-      - "${HOME}/mnt/mlruns:${HOME}/mnt/mlruns"
+      - "${MLFLOW_ARTIFACTS_URI?Variable not set}:${MLFLOW_ARTIFACTS_URI?Variable not set}"
+    # infinite loop
+    command: "tail -f /dev/null"
+      
