--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
     volumes:
       - "${MLFLOW_ARTIFACTS_URI?Variable not set}:${MLFLOW_ARTIFACTS_URI?Variable not set}"
     # infinite loop
-    command: "tail -f /dev/null"
+    # command: "tail -f /dev/null"
       
